# kof-parser

./: .gitattributes  .gitignore  CHANGES.md  LICENSE  README.md  azure-pipelines.yml  pyproject.toml
.github/workflows/: branch.yaml  release.yaml
src/kof_parser/: KoordSys.csv  __init__.py  enums.py  exceptions.py  kof.py  model.py  parser.py  writer.py
src/ngi_kof_parser/: KoordSys.csv  __init__.py  exceptions.py  model.py  parser.py  version.py  writer.py
src/parse_kof/: __init__.py  parser.py  version.py
tests/: test_parse.py  test_write.py
tests/data/: 15-5-18-Fossegata_linux.kof  15-5-18-Fossegata_windows.kof  ED50_UTM32_EN.kof  Innmålt_UTM32.kof  KOF_from_ArcGIS.kof  UTM32_EN.kof  UTM32_NE.kof  UTM33_EN.kof  UTM33_NE.kof  import_template.kof  kof-with-tabs.kof  test.kof
