[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | venv
  | \.venv
  | env
  | \.env
  | _build
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.poetry]
name = "kof-parser"
version = "0.1.3"
description = "A KOF file parser. Follows Norkart's KOF 2.0 specification from 2005."
license = "MIT"
authors = ["Magnus Mariero <magnus@neate.no>", "Jostein Leira <jostein@leira.net>"]
maintainers = ["Jostein Leira <jostein@leira.net>"]
readme = "README.md"
homepage = "https://github.com/norwegian-geotechnical-institute/kof-parser"
repository = "https://github.com/norwegian-geotechnical-institute/kof-parser"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]
packages = [
    { include = "kof_parser", from="src" },
]


[tool.poetry.dependencies]
python = ">=3.11,<4"
pydantic = ">=2.11,<3"
coordinate-projector= "*"
charset-normalizer = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
mypy = "*"
bandit = "*"
safety = "*"
pip-licenses = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
