[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | venv
  | \.venv
  | env
  | \.env
  | _build
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[project]
name = "kof-parser"
version = "0.1.4"
description = "A KOF file parser. Follows Norkart's KOF 2.0 specification from 2005."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4"
authors = [
    { name = "Magnus Mariero", email = "magnus@neate.no" },
    { name = "Jostein Leira", email = "jostein@leira.net" }
]
maintainers = [
    { name = "Jostein Leira", email = "jostein@leira.net" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "pydantic>=2.11,<3",
    "coordinate-projector",
    "charset-normalizer",
]

[project.urls]
Homepage = "https://github.com/norwegian-geotechnical-institute/kof-parser"
Repository = "https://github.com/norwegian-geotechnical-institute/kof-parser"

[tool.uv]
# Development dependencies for `uv sync --dev`
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "mypy",
    "bandit",
    "safety",
    "pip-licenses",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kof_parser"]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"
